# gql-rust

./: Cargo.toml  README.md
src/: config.rs  graphql.rs  helper.rs  main.rs  model.rs  routes.rs  schema.rs
src/routes/: graphiql.rs  graphql.rs
src/schema/: query.rs
