[package]
name = "gql-rust"
version = "0.1.0"
authors = ["kaushik <kaushik@dream11.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3.3.2"
actix-http = "2.2.0"
actix-rt = "1.1.1"
async-std = "1.8.0"
serde = "1.0.118"
serde_json = "1.0.60"
serde_derive = "1.0.123"
juniper = "0.15.2"
reqwest = { version = "0.10.9", features = ["json"] }
graphql_client = "0.9.0"
